<resources>
    <string name="app_name">FGI问卷</string>
    <string name="app_title">问卷名称</string>
    <string name="tv_zh">账号：</string>
    <string name="hint_zh">请输入你的账号！</string>
    <string name="tv_mima">密码：</string>
    <string name="hint_mima">请输入你的密码！</string>
    <string name="cb_mima">记住密码</string>
    <string name="cb_auto">自动登录</string>
    <string name="title_login">账号登录</string>
    <string name="btn_login">登录</string>
    <string name="error_login">登录失败，请检查你的账号及密码！</string>
    <string name="error_login1">登录失败，网络错误！</string>
    <string name="error_network">请检查您的网络连接状态！</string>
    <string name="success_login">登录成功！</string>
    <string name="tab_home">首页</string>
    <string name="tab_search">搜索</string>
    <string name="tab_settings">设置</string>
    <string name="tab_help">帮助</string>
    <string name="loginout">退出</string>
    <string name="welcome">欢迎您！</string>
    <string name="rloginout">再按一次退出程序！</string>
    <string name="buttonnext">下一步</string>
    <string name="textinput">请输入...</string>
    <string name="papernoanswer">该问卷暂时无法回答，请稍后重试！</string>
    <string name="mustvalue">该题为必答题，请选择或回答！</string>
    <string name="mustchoise">该题必须选择%1$d-%2$d项！</string>
    <string name="title_activity_show">该题为必答题，请选择或回答！</string>
    <string name="submitsucess">提交成功</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_main">首页</string>

    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>

    <string name="action_settings">退出登陆</string>
    <string name="title_activity_login">系统登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密　码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">用户名不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"账户被限制登录或者其他错误" </string>

    <string name="list_index"> 首　页 </string>
    <string name="list_wenjuan">调查问卷</string>
    <string name="list_jieguo">回答结果</string>
    <string name="list_gongzhonghao">“晓得”微信公众号</string>
    <string name="list_shezhi">系统设置</string>
    <string name="list_about">关于我们</string>
    <string name="list_result">具体列表</string>
</resources>
